# Isogeny-Walk-zk-SNARKs-for-SIDH-and-CSIDH

./: Cargo.toml  README.md  coeffs_plus.txt  coeffs_plus_plus.txt  interp_poly_coeffs.txt  new_coeffs.txt  psi_coeffs.txt  roots_sidh.txt  rust-toolchain  rustfmt.toml
src/: benchmarks.txt  csidh_512.rs  csidh_fri.rs  csidh_prove.rs  field.rs  generalized_fri.rs  get_primes.py  get_roots.rs  isogeny_prove.rs  main  main.rs  matrix.rs  merkle.rs  run_isogeny.rs  sidh_sike_p434.rs  test_field.rs
