[package]
name = "csidh_walk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.0-alpha.4"
ark-poly = "0.4.0-alpha.4"
ark-crypto-primitives = "0.4.0-alpha"
ark-sponge = "0.4.0-alpha"
ark-std= "0.4.0-alpha"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
nalgebra = "0.31.4"